--- a/prendapp/stylesTablas.css
+++ b/prendapp/stylesTablas.css
@@ -36,3 +36,7 @@ table, th, td {
     text-decoration: underline;
     cursor: pointer;
 }
+.option{
+    background-color: transparent;
+    color:black;
+}
