--- a/prendapp/stylesTablas.css
+++ b/prendapp/stylesTablas.css
@@ -36,3 +36,10 @@ table, th, td {
     text-decoration: underline;
     cursor: pointer;
 }
+.button4{
+    width:30%;
+    padding: 10px 20px; 
+    font-size: 16px; 
+    border-bottom-left-radius: 40px 40px;
+    border-top-right-radius: 40px 40px;  
+}
