--- a/prendapp/styleTablas.css
+++ b/prendapp/styleTablas.css
@@ -8,14 +8,15 @@ table, th, td {
 }
 
 .button{
-    background-color: #E2F6CA;
+    background-color: purple;
     margin-left: 5%;
+    color: white;
 }
 .button:hover{
     background-color: #FF5722;
 }
 .a{
-    color:#E2F6CE;
+    color:purple;
 }
 .a:hover{
     color:#FF5722;
@@ -28,13 +29,15 @@ table, th, td {
     border-top-right-radius: 40px 40px;  
 }
 .p{
-    color:red;
+    color:purple;
 }
 .button3 {
+    
     background-color: transparent;
     border: none;
-    text-decoration: underline;
+    text-decoration: none;
     cursor: pointer;
+    
 }
 .button4{
     width:30%;
@@ -42,4 +45,7 @@ table, th, td {
     font-size: 16px; 
     border-bottom-left-radius: 40px 40px;
     border-top-right-radius: 40px 40px;  
+}
+.letras{
+    color:#11294d;
 }
