--- a/prendapp/stylesCrear.css
+++ b/prendapp/stylesCrear.css
@@ -1,8 +1,6 @@
 :root{
 	--green:                hsl(162, 45%, 56%);
     --lead:                 hsl(162,  2%, 56%);
-    --blue:                 hsl(220, 85%, 57%);
-    --violet:               hsl(272, 92%, 32%);
     --tex-white:            hsl(0, 0%, 100%);
     --text-ligth-gray:      hsl(0, 0%, 90%);
     --body-bg-color:        hsl(200, 54%, 12%);
@@ -19,8 +17,7 @@
 	box-sizing: border-box;
 }
 body {
-	background-color: var(--body-bg-color);
-	color: var(--text-ligth-gray);
+	background-color: #eeeeee;
 	font-family: Georgia, 'Times New Roman', Times, serif;
 	font-weight: 900;
 	font-size: 16px;
@@ -71,7 +68,7 @@ a{
    display: inline-block;
 }
 .t-text {
-	background: linear-gradient(to right, var(--green), var(--lead));
+	background: linear-gradient(to right, purple, var(--lead));
 	-webkit-background-clip: text;
 	background-clip: text;
 	color: transparent;
@@ -90,16 +87,15 @@ a{
 	z-index: 1;
 }
 .form-c .box{
-	border-color: var(--glass-bg-color);
-	border: 1px solid var(--border-color);
-	padding: 40px 50px;
-	border-radius: 20px;
+	border-color: purple;
+    border: 1px solid purple;
+    padding: 40px 50px;
+    border-radius: 20px;
 }
 .form-c h3{
 	font-size: 28px;
 	text-align: center;
 	line-height: 1.2;
-	color: var(--tex-white);
 	font-weight: 500;
 }
 .form-c img {
@@ -121,7 +117,6 @@ a{
 	display: block;
 	height: 45px;
 	width: 100%;
-	background-color: transparent;
 	border: none;
 	border-bottom: 1px solid var(--border-color);
 	color: inherit;
